--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "onsenui": "^2.0.4",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.0.0",
     "pusher-js": "^4.0.0",
     "react": "^15.3.2",
