--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "es6-object-assign": "^1.1.0"
   }
 }
