few bug fixes loaders changed

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "es6-object-assign": "^1.1.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "node-uuid": "^1.4.8"
   }
 }
