--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^0.26.0",
     "es6-promise": "^4.0.5",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fetch-retry": "^1.0.3",
     "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
