--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "es6-promise": "^4.0.5",
+    "eslint-config-rallycoding": "^3.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fetch-retry": "^1.0.3",
     "file-loader": "^0.9.0",
