--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^6.5.1",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -35,6 +36,7 @@
     "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
+    "jspolyfill-array.prototype.findIndex": "^0.1.0",
     "onsenui": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.0.0",
