--- a/package.json
+++ b/package.json
@@ -57,17 +57,31 @@
         "webpack-dev-server": "^1.16.2"
     },
     "dependencies": {
+        "babel-core": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
         "branch-cordova-sdk": "~2.5.14",
         "cordova-android": "^6.2.3",
         "cordova-browser": "~4.1.0",
+        "cordova-plugin-facebook4": "^1.7.4",
         "cordova-plugin-file-transfer": "~1.6.2",
         "cordova-plugin-google-analytics": "~1.7.5",
         "cordova-plugin-googleplus": "^5.1.1",
         "cordova-plugin-whitelist": "1",
         "cordova-plugin-x-socialsharing": "~5.1.6",
         "es6-object-assign": "^1.1.0",
+        "es6-promise-plugin": "^4.1.0",
+        "fetch-retry": "^1.1.1",
         "lodash": "^4.17.4",
-        "node-uuid": "^1.4.8"
+        "node-uuid": "^1.4.8",
+        "pusher-js": "^4.1.0",
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
+        "react-lazy-load": "^3.0.12",
+        "react-onsenui": "^1.3.4",
+        "react-redux": "^5.0.5",
+        "react-waypoint": "^5.3.1"
     },
     "cordova": {
         "platforms": [
@@ -80,9 +94,14 @@
             "cordova-plugin-google-analytics": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-x-socialsharing": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "1626499117583779",
+                "APP_NAME": "Zenparent"
+            },
             "cordova-plugin-googleplus": {
-                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.579056634272-4fu49kha3i961ajn1ht0s4f55dd33ljq"
-            }
+                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.579056634272-gc3asrv8lqsvs93fsa5ri4m4fg92fijn"
+            },
+            "es6-promise-plugin": {}
         }
     }
 }
