--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "es6-object-assign": "^1.1.0",
         "es6-promise-plugin": "^4.1.0",
         "fetch-retry": "^1.1.1",
+        "google-analytics-plugin": "^0.1.14",
         "lodash": "^4.17.4",
         "node-uuid": "^1.4.8",
         "onsenui": "^2.3.2",
