--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
         "babel-preset-stage-2": "^6.18.0",
         "classnames": "^2.2.5",
         "css-loader": "^0.26.0",
-        "es6-promise": "^4.0.5",
         "es6-object-assign": "^1.1.0",
-        "lodash": "^4.17.4",
-        "node-uuid": "^1.4.8",
+        "es6-promise": "^4.0.5",
         "eslint-config-rallycoding": "^3.2.0",
         "extract-text-webpack-plugin": "^1.0.1",
         "fetch-retry": "^1.0.3",
@@ -40,23 +38,25 @@
         "isomorphic-fetch": "^2.2.1",
         "json-loader": "^0.5.4",
         "jspolyfill-array.prototype.findIndex": "^0.1.0",
-        "onsenui": "^2.0.4",
+        "lodash": "^4.17.4",
+        "node-uuid": "^1.4.8",
+        "onsenui": "^2.3.3",
         "optimize-css-assets-webpack-plugin": "^1.3.0",
         "postcss-loader": "^1.0.0",
         "pusher-js": "^4.0.0",
-        "react": "^15.3.2",
-        "react-dom": "^15.3.2",
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
         "react-hot-loader": "^3.0.0-beta.6",
-        "react-lazy-load": "^3.0.11",
-        "react-onsenui": "^1.0.4",
+        "react-lazy-load": "^3.0.12",
+        "react-onsenui": "^1.3.4",
         "react-redux": "^5.0.3",
-        "react-waypoint": "^5.0.0",
+        "react-waypoint": "^7.0.3",
         "redux": "^3.6.0",
         "redux-logger": "^2.8.1",
         "redux-thunk": "^2.2.0",
         "style-loader": "^0.13.1",
         "url-loader": "^0.5.7",
-        "webpack": "^1.13.2",
+        "webpack": "^1.15.0",
         "webpack-dev-server": "^1.16.2"
     },
     "cordova": {
@@ -65,7 +65,6 @@
             "browser"
         ],
         "plugins": {
-            "branch-cordova-sdk": {},
             "cordova-plugin-facebook4": {
                 "APP_ID": "1626499117583779",
                 "APP_NAME": "Zenparent"
@@ -73,11 +72,15 @@
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-x-socialsharing": {},
-            "es6-promise-plugin": {}
+            "es6-promise-plugin": {},
+            "branch-cordova-sdk": {
+                "BRANCH_KEY": "key_live_ijwCj531qk2z0y7cVgUlYapdtzfAWQfP",
+                "URI_SCHEME": "zenparent"
+            }
         }
     },
     "dependencies": {
-        "branch-cordova-sdk": "~2.5.14",
+        "branch-cordova-sdk": "^2.6.0",
         "cordova-android": "^6.2.3",
         "cordova-browser": "~4.1.0",
         "cordova-plugin-facebook4": "^1.7.4",
@@ -87,6 +90,7 @@
         "es6-promise-plugin": "^4.1.0",
         "mkpath": "^1.0.0",
         "node-version-compare": "^1.0.1",
-        "plist": "^2.1.0"
+        "plist": "^2.1.0",
+        "xml2js": "^0.4.17"
     }
 }
